-
Bug
-
Resolution: Fixed
-
Not Evaluated
-
Qt Creator 14.0.0
-
None
-
c33decf1b (14.0)
see attached screenshot
i have two environment variables set up manually
GST_DEBUG_DUMP_DOT_DIR=/tmp
QT_LOGGING_RULES=qt.multimedia.*=true
my "base" configuration has an envvar GST_DEBUG.
if i select this `GST_DEBUG` entry and press "edit", qtc does not add a new entry to the text field, but selects `_DUMP_DOT_DIR=/tmp`. maybe the "edit" functionality has a heuristics that searches for the `GST_DEBUG` prefix (instead of e.g. `GST_DEBUG=1) and therefore selects the wrong entry in the text field
For Gerrit Dashboard: QTCREATORBUG-30855 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
566078,2 | Utils: Fix editing in environment widget | 14.0 | qt-creator/qt-creator | Status: MERGED | +2 | +1 |