Utils: Fix editing in environment widget

In the edge case that the name of one variable starts with the name of
another followed by an underscore, we mistakenly stopped at the former
when searching for the latter in the text widget.

Fixes: QTCREATORBUG-30855
Change-Id: I6decf7805a937d52d25e6c62899ae062f636a2a1
Reviewed-by: Christian Stenger <christian.stenger@qt.io>